K8S/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  labels:
    app: "nginx-1"    
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: "nginx-1"
  type: NodePort
